--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,38 @@
+header{
+  background-color: #2c3e50;
+}
+
+.jumbotron,
+.about-section{
+  background-color: #1abc9c;
+}
+
+.jumbotron img{
+  width: 200px;
+}
+
+.six-image img{
+  width: 100%;
+}
 
 
+.dwn-btn{
+  font-size: 20px;
+  padding: 5px;
+  margin: 20px 0;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid white;
+  color: white;
+}
 
 
+.font-weight-for-title{
+  font-weight: 500;
+  font-size: 50px;
+}
 
-
-
-
-
-
-
-
-
+.personla
 
 
 
@@ -20,7 +42,6 @@
  */
 
 .debug{
-  background-color: rgba(255, 0, 0, 0.274);
   border: 1px solid black;
 
 }
