--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,11 @@ header{
   background-color: #2c3e50;
 }
 
+a{
+  text-decoration: none;
+  color: #1abc9c;
+}
+
 .jumbotron,
 .about-section{
   background-color: #1abc9c;
@@ -15,6 +20,9 @@ header{
   width: 100%;
 }
 
+.contatti{
+  background-color: #3a546d;
+}
 
 .dwn-btn{
   font-size: 20px;
@@ -26,16 +34,73 @@ header{
   color: white;
 }
 
+.snd-btn{
+  font-size: 15px;
+  padding: 5px 15px;
+  margin: 20px 0;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #1abc9c;
+  color: rgb(255, 255, 255);
+}
+
+.line-star{
+  width: 25%;
+  height: 3px;
+  background-color: black;
+}
+
+.star{
+  font-size: 30px;
+  padding: 0 15px;
+}
 
 .font-weight-for-title{
   font-weight: 500;
   font-size: 50px;
 }
 
-.personla
+.copyright{
+  font-size: 15px;
+  background-color: #2c3e50;
+}
 
+#special-padding-radius{
+  font-size: 20px;
+  padding: 5px 10px;
+  margin: 10px;
+  cursor: pointer;
+}
 
+#white-color{
+  background-color: white;
+}
 
+ /* ---------------------------FORM--------------------------- */
+.personal-form{
+  color: black;
+  width: 100%;
+  padding: 10px;
+  border-left: 0 none;
+  border-right: 0 none;
+  border-top: 0 none;
+  border-bottom:1px solid rgb(192, 189, 189);
+}
+
+.personal-form:focus{
+  outline: none;
+}
+
+#special-height{
+  padding-bottom: 150px;
+  margin-bottom: 10px;
+}
+
+::placeholder{
+  color: black;
+}
+
+ /* ---------------------------FORM--------------------------- */
 
 /*
   DEBUG
@@ -47,5 +112,5 @@ header{
 }
 
 .h100{
-  height: 100px;
+  height: 510px;
 }
