--- a/assets/style.css
+++ b/assets/style.css
@@ -34,6 +34,11 @@ a{
   color: white;
 }
 
+.dwn-btn:hover{
+  color: black;
+  background-color: white;
+}
+
 .snd-btn{
   font-size: 15px;
   padding: 5px 15px;
@@ -42,6 +47,10 @@ a{
   border-radius: 5px;
   background-color: #1abc9c;
   color: rgb(255, 255, 255);
+}
+
+.snd-btn:hover{
+  filter: brightness(60%);
 }
 
 .line-star{
@@ -65,6 +74,44 @@ a{
   background-color: #2c3e50;
 }
 
+/* Hoverlay */
+
+.overlay-hover{
+  position: absolute;
+  top: 0px;
+  left: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  width: 94.5%;
+  height: 95%;
+  background-color: rgba(26, 188, 156, 0.4);
+  opacity: 0;
+}
+
+.overlay-hover i{
+  display: flex;
+  justify-content: center;
+  vertical-align: middle;
+  font-size: 70px;
+  color: rgb(255, 255, 255);
+}
+
+.overlay-hover:hover{
+  opacity: 1;
+}
+
+
+/* Hoverlay */
+
+
+
+
+
+
+
+/* utilities */
 #special-padding-radius{
   font-size: 20px;
   padding: 5px 10px;
@@ -75,6 +122,11 @@ a{
 #white-color{
   background-color: white;
 }
+/* utilities */
+
+
+
+
 
  /* ---------------------------FORM--------------------------- */
 .personal-form{
